# gputranad

./: .pdm-python  .pre-commit-config.yaml  README.md  pyproject.toml
src/gputranad/: models.py  preprocess.py
