[project]
name = "gputranad"
version = "0.1.0"
description = "PyTorch Lightning wrapper library for TranAD: Deep Transformer Networks for Anomaly Detection in Multivariate Time Series."
authors = [
    {name = "Taeyong Jeon", email = "taeyongjeon24@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.7.1",
]
