[project]
name = "gputranad"
version = "0.1.0"
description = "PyTorch Lightning wrapper library for TranAD: Deep Transformer Networks for Anomaly Detection in Multivariate Time Series."
authors = [
    {name = "Taeyong Jeon", email = "taeyongjeon24@gmail.com"},
]
dependencies = [
    "torch>=2.3.1",
    "lightning>=2.3.3",
    "pandas>=2.2.2",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.7.1",
    "black>=24.4.2",
    "flake8>=7.1.0",
    "isort>=5.13.2",
    "pytest>=8.3.1",
]

[[tool.pdm.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
verify_ssl = true
